fix alignment button navbar

--- a/src/Styling/CarouselCard.css
+++ b/src/Styling/CarouselCard.css
@@ -15,8 +15,8 @@
 .detailMovie {
     position: absolute;
     text-align: left;
-    left: -3rem;
-    bottom: 10rem;
+    left: -4rem;
+    bottom: 5rem;
 
 }
 
